--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,10 @@
 Automatically replace dll in memhack when rebuild dll
 Add way to disable all setters/getters?
+Make global getter/setter fn creations and use those instead of constructing everywhere (remove capitalize as well?) (check pilot, skills stuff and itb string)
+Standardize "set" to take object type or each arg. Consider a helper for this? (check pilot, skills stuff and itb string)
 
 Add tests/test support (see memedit?)
 Add dynamic scanning capabilities for all accessible memory (see memedit scan/scanner)
 	Include negate scans
 	Include value changed scans?
+Add base game offset example (score)
