--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,5 @@
 Automatically replace dll in memhack when rebuild dll
-Add way to disable all setters/getters?
-Make global getter/setter fn creations and use those instead of constructing everywhere (remove capitalize as well?) (check pilot, skills stuff and itb string)
-Standardize "set" to take object type or each arg. Consider a helper for this? (check pilot, skills stuff and itb string)
-Add a dump memory functon (for things like pawn data)
+consider dll subtables - reorganize or flatten?
 
 Add tests/test support (see memedit?)
 Add dynamic scanning capabilities for all accessible memory (see memedit scan/scanner)
