--- a/todo.txt
+++ b/todo.txt
@@ -18,4 +18,4 @@ Add tests/test support (see memedit?)
 
 ---------- PLUS Ex ---------
 
-Preserve time traveler pilot across runs (Profile.pilot - seems to only sometimes be saved/loaded and going to main menu without restarting preserves cached profile data)
+Implement pilot scanning based on structs to narrow down results 
