Updating todo with more planned changes and adding in different reusability options for skills instead of just allowing a binary yes or no to allowing duplicates and updating tests to run multiple modules to split the growing plus manager tests basing it off the UniversalRandomizerCore busted configurations I got working as I wanted. Probably should have split into more commits but too late now

--- a/todo.txt
+++ b/todo.txt
@@ -18,4 +18,8 @@ Add tests/test support (see memedit?)
 
 ---------- PLUS Ex ---------
 
-Implement pilot scanning based on structs to narrow down results 
+Tie into game for enabling/disabling AE skills
+Add (built in) options to exclude/include skills based on other skills
+Add/support exclusions defined in txt files for user additions for conflicting mods
+Look into a way to autoadd config options for each added skill? Maybe if not support config file based enable/disabling?
+(once added scan for hanger) update to assign skills to new pilots in hanger
