--- a/todo.txt
+++ b/todo.txt
@@ -18,8 +18,10 @@ Add tests/test support (see memedit?)
 
 ---------- PLUS Ex ---------
 
-Tie into game for enabling/disabling AE skills
-Add (built in) options to exclude/include skills based on other skills
-Add/support exclusions defined in txt files for user additions for conflicting mods
-Look into a way to autoadd config options for each added skill? Maybe if not support config file based enable/disabling?
+Tie into game for enabling/disabling AE skills. Remove/replace AE Skills checkbox saying its unused with CPLUS+ instead?
+Allow customizable skills
+	Add/support exclusions defined in txt files for user additions for conflicting mods
+	Look into a way to autoadd config options for each added skill? Maybe if not support config file based enable/disabling?
+	or instead just provide a UI? That would probably be cleaner, easier, and better
 (once added scan for hanger) update to assign skills to new pilots in hanger
+
