--- a/todo.txt
+++ b/todo.txt
@@ -18,12 +18,14 @@ Add tests/test support (see memedit?)
 
 ---------- PLUS Ex ---------
 
+Finish up spacing on UI
+Add relationships editor to UI
+
 Tie into game for enabling/disabling AE skills. Remove/replace AE Skills checkbox saying its unused with CPLUS+ instead?
-Allow customizable skills
-	Add/support exclusions defined in txt files for user additions for conflicting mods
-	Look into a way to autoadd config options for each added skill? Maybe if not support config file based enable/disabling?
-	or instead just provide a UI? That would probably be cleaner, easier, and better
 (once added scan for hanger) update to assign skills to new pilots in hanger
 Grid and reactors don't stack - make a way to stack them on skills
-OnLevelUp Hook/event for pilots? Tie into dialogs?
+	Add OnLevelUp Hook/event for pilots? Tie into on save data to determine. Also tie into level up fn?
+Add localization support/auto generate skill texts and such to support GetText? Is this needed?
+	Doesn't seem to be but might be good to have "auto dictionary" support. Need to think on how to do this
+	Mostly just replacing test with GetText and adding a SetText. Can probably try calling GetText to see if it exists first
 
