--- a/todo.txt
+++ b/todo.txt
@@ -1,35 +1,20 @@
 For 1.0 release:
-1. Add scan for storage in upgrade menu
-	As a backup/double check, check the vtable of research control
-	Breach.exe+4B4F08 -> onj + 0x18 -> Game + 0x10 -> GameMap + 0x5674 (ResearchControl) + 0x68 hanger (vector) (56DC)
-		This is to head of vector. Tail is next byte
-		From there offset offset by 11c (or 120) to get pilot
-		Note the vector can reallocate!
-	Need to investigate/handle weapons vs pilots. Check for field in wrapper struct or for vtable
-		Is the x120 offset for pilot the same for weapon?
-2. Restructure calls?
-	consider dll subtables - reorganize or flatten?
-	dll -
-		rw - for read/write operations on memory address and supporting consts
-		alloc - for allocating
-		address - for getting addresses (base and UD), bounds, etc
-		scanner
-	base obj (lua)
-		debug - helpful for troubleshooting
-			todo add a log each k & v fn as well?
-		struct - struct related helpers/functions for accessing/modifying memory
-3. Look into adding tests (at least in lua?). May not be very feasible for most things
-	Add tests/test support (see memedit?)
-4. Document how to find/how I found the references in memhack
+1. Find pilots in pods and island rewards
+2. Document how to find/how I found the references in memhack
 	1. Score
 	2. Rep
 	3. pilot (in mech)
 	4. storage (very complex)
-5. Change pointed/strucType to subType for consistency
-6. Find pilots in pods and island rewards
-	a. Make sure it doesn't find weapons
-	b. Perfect island in squad data
-	
+3. Add queued firing of re-entrant hooks
+5. Hijack AddPilot to avoid searching _G for pilots?
+6. Add structure verification support (vtables or custom funcs)
+7. Split structs out of pilot into separate classes (Maybe not the array one but at least lvl up skills itself)
+8. Test added stacktrace calls, add to modloader and modutils (test events & hooks for both)
+9. Change pointed/strucType to subType for consistency
+
+Next release:
+1. Look into adding tests on c++ side?
+2. Add more lua tests
 
 ---------- PLUS Ex ---------
 
@@ -43,17 +28,15 @@ For 1.0 release:
 	b. TipTitle_New_PilotAbilities	- "Advanced Pilot Abilities"
 	c. TipTitle_New_PilotAbilities	- "Enable advanced pilot abilities. Pilots will gain new skills as they level up.\n\nRecommended for anyone who has a good grasp of the core game."
 3. Update to assign pilot skills in storage
-*4. Add OnLevelUp Hook/event for pilots? Tie into on save data to determine. Also tie into level up fn?
-	Add on skill change hook/event?
-	Hook events not working/triggering. Plain hook works
-*5. Allow grid and reactors to stack like hp and move (using 4)
-	Need to tie into more places than currently with just lvl up fn
-	
+4. Make skill enable/active hooks and function calls
+
+
 Bugs
 1. Reusability not saving/restoring correctly? Seems to be working now? Can't retrigger it for some reason? Was getting nil skillId? Maybe related to extra skills no longer there?
-	
+
 Next release candadites:
 1. Move to GetText to be consistent/allow localization
 2. Add auto support of "auto-dictonarying" skill strings
 	Mostly just replacing test with GetText and adding a SetText. Can probably try calling GetText to see if it exists first
-
+3. Re-evaluate mock usage in tests. Is there a simpler way?
+4. consider using bulk reading for state capture to avoid multiple reads near each other as optimization (maybe defer?)
