--- a/todo.txt
+++ b/todo.txt
@@ -15,18 +15,20 @@ Next release:
 ---------- PLUS Ex ---------
 
 For 1.0 release:
-1. Cleanup relationship GUI and get it looking a bit nicer
-	a. Collapsable frames for sections (like weapons deck)
-	b. Spacing between sections
-	c. drop down sizing and location
+1. Continue GUI Cleanup
+	a. Top level percentages
+	b. Always draw pilot square - draw it around 65x65 image? Have a ? pilot image?
+	c. Left align drop downs
+	d. Drop downs show up offset
+	e. Hover skills in relationships shows the description. Hover over add row entry too
+	f. Hover tooltips of relationship editors
+	g. Adding sorting to relationships & sort by either column
+	h. Max dialog width (full screen)
 2. Check into removing/hiding/replacing text for AE skills UI checkbox
 	a. Toggle_NewPilotAbilities - "Pilot Abilities"
 	b. TipTitle_New_PilotAbilities	- "Advanced Pilot Abilities"
 	c. TipTitle_New_PilotAbilities	- "Enable advanced pilot abilities. Pilots will gain new skills as they level up.\n\nRecommended for anyone who has a good grasp of the core game."
 
-
-Bugs
-1. Reusability not saving/restoring correctly? Seems to be working now? Can't retrigger it for some reason? Was getting nil skillId? Maybe related to extra skills no longer there?
 
 Next release candadites:
 1. Move to GetText to be consistent/allow localization
