--- a/todo.txt
+++ b/todo.txt
@@ -9,21 +9,26 @@ For 1.0 release:
 Next release:
 1. Look into adding tests on c++ side?
 2. Add more lua tests
+3. Move errors to logs for validation and other things
 
 ---------- PLUS Ex ---------
 
 For 1.0 release:
-1. UI Updates
-	a. Remove inclusive relations if there are no inclusive skills defined
+1. Testing!!!
 
 Next release candadites:
-1. Move to GetText to be consistent/allow localization
-2. Add auto support of "auto-dictonarying" skill strings
-	Mostly just replacing test with GetText and adding a SetText. Can probably try calling GetText to see if it exists first
-3. Re-evaluate mock usage in tests. Is there a simpler way?
-4. consider using bulk reading for state capture to avoid multiple reads near each other as optimization (maybe defer?)
-5. Skill rarities - legendary skills & skill caps
-6. Squad inclusions/exclusions
-7. Categoricial exclusions - e.g. movement, boosted, armor, etc
-8. Add support for multiple pilots with same ID
-9. Hijack AddPilot to avoid searching _G for pilots?
+	Major Features:
+		1. Categoricial exclusions - e.g. movement, boosted, armor, etc
+		2. Memory Analyzer to help find things
+		3. Skill default functions - e.g. isNotCyborg for Popular Hero
+		4. Add support for multiple pilots with same ID
+		5. Squad inclusions/exclusions
+		6. Skill rarities? - legendary skills & skill caps
+
+	Fixes/Enhancemnets
+		1. Move to GetText to be consistent/allow localization
+		2. Add auto support of "auto-dictonarying" skill strings
+			Mostly just replacing test with GetText and adding a SetText. Can probably try calling GetText to see if it exists first
+		3. Re-evaluate mock usage in tests. Is there a simpler way?
+		4. consider using bulk reading for state capture to avoid multiple reads near each other as optimization (maybe defer?)
+		5. Hijack AddPilot to avoid searching _G for pilots?
