Updating todo roadmap

--- a/todo.txt
+++ b/todo.txt
@@ -7,32 +7,31 @@ For 1.0 release:
 2. Add memory analyzer
 3. Get working for steam version
 	Pilot vtable
-	score
-
-Next release:
-1. Look into adding tests on c++ side?
+	
+	
+1.1 Release:
+1. Move errors to logs for validation and other things
 2. Add more lua tests
-3. Move errors to logs for validation and other things
+3. Look into adding tests on c++ side?
+
 
 ---------- PLUS Ex ---------
 
 For 1.0 release:
-1. Configs get cleared sometimes... Not sure what causes it yet
+1. Test
 
-Next release candadites:
-	Major Features:
-		1. Categoricial exclusions - e.g. movement, boosted, armor, etc
-		2. Memory Analyzer to help find things
-		3. Skill default functions - e.g. isNotCyborg for Popular Hero
-		4. Add support for multiple pilots with same ID
-		5. Squad inclusions/exclusions
-		6. Skill rarities? - legendary skills & skill caps
-		7. Specifying defaults for things like weight and reusublity (separate for lowest possible)
 
-	Fixes/Enhancemnets
-		1. Move to GetText to be consistent/allow localization
-		2. Add auto support of "auto-dictonarying" skill strings
-			Mostly just replacing test with GetText and adding a SetText. Can probably try calling GetText to see if it exists first
-		3. Re-evaluate mock usage in tests. Is there a simpler way?
-		4. consider using bulk reading for state capture to avoid multiple reads near each other as optimization (maybe defer?)
-		5. Hijack AddPilot to avoid searching _G for pilots?
+1.1 Release:
+1. Categoricial/pool based exclusions - e.g. movement, boosted, armor, etc
+2. Skill default functions - e.g. isNotCyborg for Popular Hero
+3. Specifying defaults for things like weight and reusublity (separate for lowest possible)
+4. Hijack AddPilot to avoid searching _G for pilots?
+
+
+1.2 Release:
+1. Add support for multiple pilots with same ID
+2. Squad inclusions/exclusions
+3. Move to GetText to be consistent/allow localization
+4. Add auto support of "auto-dictonarying" skill strings
+	Mostly just replacing test with GetText and adding a SetText. Can probably try calling GetText to see if it exists first
+5. consider using bulk reading for state capture to avoid multiple reads near each other as optimization
